--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<meta name="viewport" content="width=640" />
+<meta name="viewport" content="initial-scale=1, maximum-scale=1" />
 <html lang="us">
 <head>
 	<meta charset="utf-8">
