setting max width to 640
also trimmed down tab bars to fit that

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="us">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale=1, maximum-scale=1" />
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=640" />
 	<title>Cthulhu Clicker</title>
 	<link href="css/ui-lightness/jquery-ui-1.10.4.custom.css" rel="stylesheet">
 	<script src="js/jquery-1.10.2.js"></script>
@@ -79,7 +79,7 @@
 }
 </style>
 
-<div id="madnessTabs" style="position: relative; width:800px; height:80px;">
+<div id="madnessTabs" style="position: relative; width:600px; height:80px;">
   <button id="madnessMadnessTab" onclick="changeMadnessTab('madnessMadnessTab')" hidden=true><img src="images/tempmadness.png"></button>
   <button id="madnessMoneyTab" onclick="changeMadnessTab('madnessMoneyTab')" hidden=true><img src="images/tempmoney.png"></button>
   <button id="madnessKnowTab" onclick="changeMadnessTab('madnessKnowTab')" hidden=true><img src="images/tempknow.png"></button>
@@ -128,7 +128,7 @@
 </div>
 
 <div id="madnessSpread">
-  <div id="madnessMadnessTabs" style="position: relative; width:800px; height:80px;">
+  <div id="madnessMadnessTabs" style="position: relative; width:600px; height:80px;">
     <button id="madnessMadnessBuildingsSubTab" onclick="changeMadnessSubTab('madnessMadnessBuildingsSubTab')" hidden=true><img src="images/tempminions.png"></button>
     <button id="madnessMadnessUpgradesSubTab" onclick="changeMadnessSubTab('madnessMadnessUpgradesSubTab')" hidden=true><img src="images/tempupgrade.png"></button>
     <button id="madnessMadnessBoughtUpgradesSubTab" onclick="changeMadnessSubTab('madnessMadnessBoughtUpgradesSubTab')" hidden=true><img src="images/tempbought.png"></button>
@@ -152,7 +152,7 @@
 </div>
 
 <div id="madnessInvest" hidden=true>
-  <div id="madnessMoneyTabs" style="position: relative; width:800px; height:80px;">
+  <div id="madnessMoneyTabs" style="position: relative; width:600px; height:80px;">
     <button id="madnessMoneyBuildingsSubTab" onclick="changeMadnessSubTab('madnessMoneyBuildingsSubTab')" hidden=true><img src="images/tempminions.png"></button>
     <button id="madnessMoneyUpgradesSubTab" onclick="changeMadnessSubTab('madnessMoneyUpgradesSubTab')" hidden=true><img src="images/tempupgrade.png"></button>
     <button id="madnessMoneyBoughtUpgradesSubTab" onclick="changeMadnessSubTab('madnessMoneyBoughtUpgradesSubTab')" hidden=true><img src="images/tempbought.png"></button>
