--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="us">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=640, user-scalable=no" />
+	<meta name="viewport" content="width=640, user-scalable=no" />
 	<title>Cthulhu Clicker</title>
 	<link href="css/ui-lightness/jquery-ui-1.10.4.custom.css" rel="stylesheet">
 	<script src="js/jquery-1.10.2.js"></script>
